erro de escrita

--- a/sobre.html
+++ b/sobre.html
@@ -88,7 +88,7 @@
                         Quais tecnologias utilizadas?
                     </h4>
                     <p>
-                        As tecnologias utilizadas na construção do projeto foram HMTL como estrutura da pagina,
+                        As tecnologias utilizadas na construção do projeto foram HTML como estrutura da pagina,
                         Bootstrap/CSS com elementos
                         de estilos e responsividade é JavaScript para desenvolver a lógica e funcinalidades.
 
