adicionado icone de limpar input

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                     <input pattern='\d*' class="form-control" type="text" id="codificar"
                         placeholder="Digite o texto ou chave">
                     <div class="input-group-append">
-                        <button class="border btn btn-light" onclick="limpar()">Limpar</button>
+                      <button class="border btn btn-light" onclick="limpar()">
+                        <img class="d-flex justify-content-center" style="height: 24px;" src="./img/backspace.svg" >
+                      </button>
                     </div>
                 </div>
 
