tratamente de letras no input

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <section class="mt-1">
 
                 <div class="alert alert-info" role="alert">
-                    Não utilize acentos e nem caracteres especiais, apenas letras.
+                    Não é aceito caracteres especiais e nem acentos, apenas letras.
                 </div>
 
                 <div id="msg-error" class="alert alert-danger d-none" role="alert">
