--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <input pattern='\d*' class="form-control" type="text" id="codificar"
                         placeholder="Digite o texto ou chave">
                     <div class="input-group-append">
-                      <button class="border btn btn-light" onclick="limpar()">
+                      <button class="border btn btn-light" onclick="limparEntrada()">
                         <img class="d-flex justify-content-center" style="height: 24px;" src="./img/backspace.svg" >
                       </button>
                     </div>
